Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5010

1353618 Uninitialized pointer field in geoip_acl plugin

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Plugins
    • None

    Attachments

      Issue Links

        Activity

          zwoop Leif Hedstrom added a comment -
           92// Base class for all Regex ACLs (which contain Acl() subclassed instances)
           93class RegexAcl
           94{
           95public:
             	
          CID 1353618 (#1 of 1): Uninitialized pointer field (UNINIT_CTOR)
          2. uninit_member: Non-static class member _rex is not initialized in this constructor nor in any functions that it calls.
           96  RegexAcl(Acl *acl) : _extra(NULL), _next(NULL), _acl(acl) {}
           97  const std::string &
          
          zwoop Leif Hedstrom added a comment - 92 // Base class for all Regex ACLs (which contain Acl() subclassed instances) 93class RegexAcl 94{ 95public: CID 1353618 (#1 of 1): Uninitialized pointer field (UNINIT_CTOR) 2. uninit_member: Non- static class member _rex is not initialized in this constructor nor in any functions that it calls. 96 RegexAcl(Acl *acl) : _extra(NULL), _next(NULL), _acl(acl) {} 97 const std::string &

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 40m
                40m