TS-5010: Initialize the regex pointer properly